# homelab

./: .gitignore  README.md
gitlab-server/: auth_groups.tf  infra_group.tf  provider.tf  repos.tf  service_accounts.tf  users.tf
vms/general/: cloud-init.tf
vms/gitlab-runner/: inventory.tmpl  provider.tf  runners.tf  variables.tf
vms/gitlab-runner/ansible/: playbook.yaml  terraform.yml
vms/gitlab-runner/ansible/roles/gitlab_runner/defaults/: main.yml
vms/gitlab-runner/ansible/roles/gitlab_runner/molecule/default/: converge.yml  molecule.yml  prepare.yml
vms/gitlab-runner/ansible/roles/gitlab_runner/molecule/default/tests/: test_default.py
vms/gitlab-runner/ansible/roles/gitlab_runner/tasks/: main.yml
vms/gitlab-runner/ansible/roles/gitlab_runner/templates/: runner_config_template.j2
vms/gitlab-server/: ansible_inventory.tmpl  provider.tf  variables.tf  vm.tf
vms/gitlab-server/ansible/: inventory.ini  playbook.yaml  pyproject.toml
vms/gitlab-server/ansible/roles/gitlab_server/molecule/default/: converge.yml  molecule.yml
vms/gitlab-server/ansible/roles/gitlab_server/molecule/default/tests/: test_default.py
vms/gitlab-server/ansible/roles/gitlab_server/tasks/: main.yml
vms/gitlab-server/ansible/roles/gitlab_server/templates/: gitlab_rb_template.j2
vms/gitlab-server/ansible/roles/gitlab_server/vars/: main.yml
vms/k8s/: config.yml  provider.tf  vm.tf
