[project]
name = "ansible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "molecule>=25.5.0",
    "molecule-docker>=2.1.0",
    "pytest>=8.3.5",
    "pytest-testinfra>=10.2.2",
    "requests>=2.32.3",
]
